2005-05-22  Richard Henderson  <rth@redhat.com>

        * elf64-alpha.c (elf64_alpha_relax_with_lituse): Relax jsr to
        undefweak to use zero register.  Call elf64_alpha_relax_got_load
        if not all uses removed.
        (elf64_alpha_relax_got_load): Relax undefweak to lda zero.
        (elf64_alpha_relax_section): Handle undefweak symbols.
        (elf64_alpha_calc_dynrel_sizes): Don't add relocs for undefweak.
        (elf64_alpha_size_rela_got_1): Likewise.
        (elf64_alpha_relocate_section): Likewise.

2005-05-22  Richard Henderson  <rth@redhat.com>

        * elf64-alpha.c (elf64_alpha_relax_section): Only operate
        on SEC_CODE sections.

2005-05-13  Bob Wilson  <bob.wilson@acm.org>

	* elf32-xtensa.c (xtensa_get_property_section_name): Add missing
	periods in linkonce_kind values.

2005-05-10  Alan Modra  <amodra@bigpond.net.au>

	Apply from mainline.
	2005-05-09  Alan Modra  <amodra@bigpond.net.au>
	* elf64-ppc.c (struct ppc64_elf_obj_tdata): Add has_dotsym.
	(ppc64_elf_add_symbol_hook): Set has_dotsym.
	(ppc64_elf_check_directives): Only process syms when has_dotsym.
	(func_desc_adjust): Hide fake function descriptors when function
	code entry is defined.
	(adjust_opd_syms): Adjust for deleted_section becoming union field.

	2005-04-05  Alan Modra  <amodra@bigpond.net.au>
	* elf64-ppc.c (dec_dynrel_count): New function split out from
	ppc64_elf_edit_toc, with additional code from ppc64_elf_edit_opd.
	(ppc64_elf_edit_toc, ppc64_elf_edit_opd): Use it.
	(ppc64_elf_tls_optimize): Likewise.

	2005-04-01  Alan Modra  <amodra@bigpond.net.au>
	* elf64-ppc.c (ppc64_elf_edit_toc): Account for dynamic relocs
	that we no longer need.

2005-05-02  Daniel Jacobowitz  <dan@codesourcery.com>

	* Makefile.am: Clear RELEASE.
	* Makefile.in: Regenerated.

2005-05-02  Daniel Jacobowitz  <dan@codesourcery.com>

	* Makefile.am: Set RELEASE.
	* configure.in: Bump version to 2.16.
	* Makefile.in, configure: Regenerated.
